improve mocking, adjust data model a bit
